# uoe-sound-design-final-proj-code

./: .gitignore  pyproject.toml
batch_processing/: batch_processing.py  tracking_file.json
batch_processing/modules/: functions_b.py  functions_old.py  graph_extraction_func.py  stem_split.py  timing_utils.py  utility_functions.py
